k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mailman
spec:
  selector:
    matchLabels:
      app: mailman
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
#Can be scaled but some data have to be shared among pods with volumes, like lists, archives and TLS data.
  replicas: 3 
  template:
    metadata:
      labels:
        app: mailman
    spec:
      hostname: "example"
      subdomain: "lists"
      containers:
      - name: mailman
        image: d3fk/mailman2
        imagePullPolicy: Always
        ports:
        - containerPort: 25 
        - containerPort: 465 
        - containerPort: 587 
        - containerPort: 80
        - containerPort: 443 

        volumeMounts:
          - name: nfs-data
            mountPath: /var/log
            subPath: log
          - name: nfs-data
            mountPath: /var/lib/mailman/lists
            subPath: lists
          - name: nfs-data
            mountPath: /etc/exim4/tls.d
            subPath: tls.d
          - name: nfs-data
            mountPath: /var/lib/mailman/archives
            subPath: archives

      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "mail.example.com"
##Declaring known internal connections to this container will avoid host resolving errors
#      - ip: "172.16.0.11"
#        hostnames:
#        - "apodsvcconnectingtothiscontainer"
#      - ip: "172.16.0.13"
#        hostnames:
#        - "anotherpodsvcconnectingtothiscontainer"
      volumes:
        - name: nfs-data
          nfs:
            server: ${NFS_SERVER}
            path: /share/mailman
